--- a/build.gradle
+++ b/build.gradle
@@ -6,17 +6,18 @@ group 'ru.netology'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
-compileJava.options.encoding = 'UTF-8'
-compileTestJava.options.encoding = 'UTF-8'
+
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'io.rest-assured:rest-assured:4.3.0'
-    testImplementation 'io.rest-assured:json-schema-validator:4.3.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
 }
 
 test {
